--- a/public/index.html
+++ b/public/index.html
@@ -6,35 +6,35 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Hello! I am Vedant" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Vedant | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <meta name="description" content="Hello! I am Vedant">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
+  <meta itemprop="name" content="Vedant | Portfolio">
+  <meta itemprop="description" content="Hello! I am Vedant">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://github.com/vedantsp/Portfolio-Website/blob/b6ff50c7b3a24f733885b8f6446adf40b73275c8/Images/readme-img.png?raw=true">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://vedant.vercel.app">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
+  <meta property="og:title" content="Vedant | Portfolio">
+  <meta property="og:description" content="Hello! I am Vedant">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://github.com/vedantsp/Portfolio-Website/blob/b6ff50c7b3a24f733885b8f6446adf40b73275c8/Images/readme-img.png?raw=true">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
+  <meta name="twitter:title" content="Vedant | Portfolio">
+  <meta name="twitter:description" content="Hello! I am Vedant">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://github.com/vedantsp/Portfolio-Website/blob/b6ff50c7b3a24f733885b8f6446adf40b73275c8/Images/readme-img.png?raw=true">
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Enable JavaScript to run this app.to</noscript>
   <div id="root"></div>
 </body>
 
